Cleanup bold caps

--- a/preamble.tex
+++ b/preamble.tex
@@ -562,6 +562,7 @@
 \newcommand*{\isticketed}{\mathbf{T}}
 \newcommand*{\isaudited}{\mathbf{U}}
 \newcommand*{\deferredtransfersstatistics}{\mathbf{X}}
+\newcommand*{\beefycommitment}[1]{\mathbf{F}_{#1}}
 
 % Extrinsics.
 \newcommand*{\extrinsic}{\mathbf{E}}
@@ -722,11 +723,30 @@
 \newcommand*{\memory}{\mu}
 \newcommand*{\pvmreg}{\N_R}
 
-\newcommand*{\jamdraftversion}{\input{VERSION}\!\!\!\!}
-\newcommand*{\jamdraftversionstring}{\jamdraftversion}
+\newcommand*{\pvm}{\mathbf{M}} % TODO: Would be nice for this to be a blackboard
+\newcommand*{\pvm¬code}{\mathbf{p}}
+\newcommand*{\pvm¬ram}{\mathbf{u}}
+\newcommand*{\pvm¬pc}{i}
+
+\newcommand*{\segoff}{\varsigma}
+\newcommand*{\execst}{\varepsilon}
+
+\newcommand*{\implications}{\mathbf{X}}
+\newcommand*{\imX}{\mathbf{x}}
+\newcommand*{\imY}{\mathbf{y}}
+\newcommand*{\im¬id}{s}
+\newcommand*{\im¬state}{\mathbf{u}}
+\newcommand*{\im¬nextfreeid}{i}
+\newcommand*{\im¬xfers}{\mathbf{t}}
+\newcommand*{\im¬yield}{y}
+\newcommand*{\im¬provisions}{\mathbf{p}}
+\newcommand*{\im¬self}{\mathbf{s}}
 
 %%%%%%%%%%%%
 % Other stuff
+
+\newcommand*{\jamdraftversion}{\input{VERSION}\!\!\!\!}
+\newcommand*{\jamdraftversionstring}{\jamdraftversion}
 
 \newcommand*{\makegpbackground}{
   \AddToShipoutPicture{
