--- a/text/auditing.tex
+++ b/text/auditing.tex
@@ -134,7 +134,7 @@ From this mapping the validator issues a set of judgments $\mathbf{j}\sub{n}$:
 %\begin{aligned}
 %    \guarantorassignments(\wrX) &\equiv \sq{\build{v}{\tup{s, v} \orderedin a}} \\
 %    \where \tup{\cX, \wrX, a} &\in \xtguarantees \\
-%    \tup{\H, \mathbf{E}} &\in \ancestors
+%    \tup{\H, \extrinsic} &\in \ancestors
 %\end{aligned}
 %\end{equation}
 
