--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -163,7 +163,7 @@ These terms are all contextualized to a single block. They may be superscripted 
   \item[$\ancestors$] The ancestor set of the block. See equation \ref{eq:ancestors}.
   \item[$\block$] The block. See equation \ref{eq:block}.
   \item[$\extrinsic$] The block extrinsic. See equation \ref{eq:extrinsic}.
-  \item[$\mathbf{F}\sub{v}$] The \textsc{Beefy} signed commitment of validator $v$. See equation \ref{eq:beefysignedcommitment}.
+  \item[$\beefycommitment{v}$] The \textsc{Beefy} signed commitment of validator $v$. See equation \ref{eq:beefysignedcommitment}.
   \item[$\reporters$] The set of Ed25519 guarantor keys who made a work-report. See equation \ref{eq:guarantorsig}.
   \item[$\header$] The block header. See equation \ref{eq:header}.
   \item[$\accumulationstatistics$] The sequence of work-reports which were accumulated this in this block. See equation \ref{eq:accumulatedreports}.
