--- a/text/overview.tex
+++ b/text/overview.tex
@@ -11,7 +11,7 @@ Broadly speaking, \Jam (and indeed blockchains in general) may be defined simply
 
 \subsection{The Block}
 
-To aid comprehension and definition of our protocol, we partition as many of our terms as possible into their functional components. We begin with the block $\block$ which may be restated as the header $\H$ and some input data external to the system and thus said to be \emph{extrinsic}, $\mathbf{E}$:
+To aid comprehension and definition of our protocol, we partition as many of our terms as possible into their functional components. We begin with the block $\block$ which may be restated as the header $\H$ and some input data external to the system and thus said to be \emph{extrinsic}, $\extrinsic$:
 \begin{align}
   \label{eq:block}\block &\equiv \tup{\header, \extrinsic} \\
   \label{eq:extrinsic}\extrinsic &\equiv \tup{\xttickets, \xtdisputes, \xtpreimages, \xtassurances, \xtguarantees}
