--- a/text/serialization.tex
+++ b/text/serialization.tex
@@ -173,12 +173,12 @@ A block $\block$ is serialized as a tuple of its elements in regular order, as i
     \var{\mathbf{f}}
   }
   \\
-  \encode{\mathbf{H}} &= \encode{
-    \encodeunsignedheader{\mathbf{H}},
+  \encode{\header} &= \encode{
+    \encodeunsignedheader{\header},
     \H_\¬sealsig
   }
   \\
-  \encodeunsignedheader{\mathbf{H}} &= \encode{
+  \encodeunsignedheader{\header} &= \encode{
     \H_\¬parent,
     \H_\¬priorstateroot,
     \H_\¬extrinsichash
